; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rte_alloc_debug.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_route.c_rte_alloc_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtentry = type { i32 }
%struct.rtentry_dbg = type { i32, i32 }

@rte_zone = common dso_local global i32 0, align 4
@rte_debug = common dso_local global i32 0, align 4
@RTD_TRACE = common dso_local global i32 0, align 4
@RTD_INUSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rtentry* ()* @rte_alloc_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rtentry* @rte_alloc_debug() #0 {
  %1 = alloca %struct.rtentry_dbg*, align 8
  %2 = load i32, i32* @rte_zone, align 4
  %3 = call i64 @zalloc(i32 %2)
  %4 = inttoptr i64 %3 to %struct.rtentry_dbg*
  store %struct.rtentry_dbg* %4, %struct.rtentry_dbg** %1, align 8
  %5 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %1, align 8
  %6 = icmp ne %struct.rtentry_dbg* %5, null
  br i1 %6, label %7, label %22

7:                                                ; preds = %0
  %8 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %1, align 8
  %9 = call i32 @bzero(%struct.rtentry_dbg* %8, i32 8)
  %10 = load i32, i32* @rte_debug, align 4
  %11 = load i32, i32* @RTD_TRACE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %7
  %15 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %1, align 8
  %16 = getelementptr inbounds %struct.rtentry_dbg, %struct.rtentry_dbg* %15, i32 0, i32 1
  %17 = call i32 @ctrace_record(i32* %16)
  br label %18

18:                                               ; preds = %14, %7
  %19 = load i32, i32* @RTD_INUSE, align 4
  %20 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %1, align 8
  %21 = getelementptr inbounds %struct.rtentry_dbg, %struct.rtentry_dbg* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %22

22:                                               ; preds = %18, %0
  %23 = load %struct.rtentry_dbg*, %struct.rtentry_dbg** %1, align 8
  %24 = bitcast %struct.rtentry_dbg* %23 to %struct.rtentry*
  ret %struct.rtentry* %24
}

declare dso_local i64 @zalloc(i32) #1

declare dso_local i32 @bzero(%struct.rtentry_dbg*, i32) #1

declare dso_local i32 @ctrace_record(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
